2002-12-23  Jeroen T. Vermeulen <jtv@xs4all.nL>
 include/pqxx/cursor.h, src/cursor.cxx, test/test42.cxx:
  - Cursor::Move() now always returns number of rows moved
 include/pqxx/*.h, src/*.cxx:
  - replaced some string arguments with const string &
2002-12-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - new version of Move() reports number of rows skipped
 include/pqxx/tablewriter.h:
  - inline TableWriter::FieldConverter::Escape()
  - fix Visual C++ version of operator()
 src/cursor.cxx:
  - report negative move distances for backward moves
 test/test42.cxx:
  - New
2002-12-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - replaced Result_size_type with Result::size_type (now visible in this file)
 include/pqxx/util.h:
  - eliminated Result_size_type_min and Result_size_type_max
2002-12-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h, src/cursor.cxx:
  - Introduced size_type typedef
 test/test13, test/test18, test/test32, test/test37:
  - Prepend "(Expected)" to error messages that are supposed to be there
2002-12-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - Add warning about not all queries allowing cursors to go backwards
 test/test19.cxx, test/test22.cxx, test/test38.cxx, test/test40.cxx,
 test/test41.cxx:
  - Use events table for cursor test to circumvent trouble with pg_tables in
    postgres 7.3 (has become a view, so cursors don't go backwards)
 test/test5.cxx, test/test24.cxx:
  - Insert some extra rows in events so cursor tests will work
2002-12-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h:
  - Added cautionary comment about limitations in PostgreSQL
2002-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac, src/cursor.cxx, src/robusttransaction.cxx, src/transaction.cxx:
  - Removed DIALECT_POSTGRESQL setting
2002-12-08  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.h:
  - Fixed missing PGSTD:: qualification for std::exception