@@ -68,7 +68,7 @@ int main(int argc, char *argv[])
 	{ "1989", "Ode an die Freiheit" },
 	{ "2001", "New millennium" },
 	{   "97", "Asian crisis" },
-	{   "10", "A Space Oddyssey" },
+	{   "01", "A Space Oddyssey" },
         {0,0}
       };
 
